# ai_trading_backend

./: .env.example  .gitignore  Dockerfile.postgres  EXECUTION_SUMMARY.md  MIGRATION_GUIDE.md  analyze_sessions.py  analyze_worst_performers.py  docker-compose.backtest.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  economic_event_analysis.csv  quick_migrate.sh  run_migrations.py  run_migrations.sh  run_migrations_psql.py
backtest_engine/: Dockerfile  README.md  alembic.ini  pyproject.toml  sweeps.json
backtest_engine/alembic/: env.py
backtest_engine/alembic/versions/: 3df6987d399b_add_uniqueconstraint_and_indexes.py  acae46605fc7_add_sweep_analysis_fields.py  c20a6f891d6e_add_mae_pips_and_mfe_pips.py  f5788ae05733_initial_backtest_schema.py
backtest_engine/backtest_engine/: broker_specs.py  cli.py  db.py  ea_config.py  models.py  source_db.py  sweeps.py
backtest_engine/backtest_engine/reporting/: advanced_insights.py  aggregates.py  plots.py  (+3 more)
backtest_engine/configs/: ea_v3_00.yml  pipfactor_broker_specs_20260529_195422.jsonl
backtest_engine/scripts/: advanced_insights_v2.py  analyze_forex_losses.py  analyze_mae.py  export_sweep_data.py  false_negatives_analysis.py  generate_detailed_report.py  generate_sample_dashboard.py  news_impact_analysis.py
backtest_engine/tests/: test_advanced_insights.py  test_ea_mirrors.py  test_strategy_contract.py
common/: pyproject.toml  setup.py
common/trading_common/: __init__.py  cache.py  db.py  market_data.py  models.py  security.py  symbols.py  timeframes.py  utils.py
(+361 files in other folders)
