[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine"
version = "0.1.0"
description = "PipFactor backtest engine — offline strategy replay against historical data"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "click>=8.1",
    "pyyaml>=6.0",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "tabulate>=0.9",
    "trading_common",
]

[project.scripts]
backtest-engine = "backtest_engine.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["backtest_engine*"]

# trading_common is installed from the sibling common/ directory.
# In Docker the COPY + pip install handles this;
# locally use:  pip install -e ../common -e .
